Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taras-osiris.better-defines",
+  "name": "com.taras-osiris.better-defines",
   "displayName": "Better Defines",
   "version": "0.1.4",
   "unity": "2017.1",
